[package]
name = "slog-syslog-jl"
version = "0.13.1"
authors = [
    "Dawid Ciężarkiewicz <dpc@dpc.pw>",
    "William Laeder <codylaeder@gmail.com",
    "Evgenii Lepikhin <johnlepikhin@gmail.com>"
]
description = "Syslog drain for slog-rs"
keywords = ["slog", "logging", "json", "log", "syslog"]
license = "MPL-2.0"
repository = "https://github.com/johnlepikhin/syslog-jl"
readme = "README.md"
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
slog = "^2.1.1"
syslog = "5.0"
